# code-historian

./: .gitignore  PUNCHLIST.md  README.md  analyze_history.sh  code-historian  install.sh  mkdocs.yml  timeline_generator.py
.history/: .gitignore_20241219122103  .gitignore_20241220222233  PUNCHLIST_20241220194204.md  PUNCHLIST_20241220194247.md  PUNCHLIST_20241220194318.md  PUNCHLIST_20241220194402.md  PUNCHLIST_20241220194556.md  PUNCHLIST_20241220194558.md  PUNCHLIST_20241220195135.md  PUNCHLIST_20241220195925.md  PUNCHLIST_20241220200040.md  PUNCHLIST_20241220200454.md  PUNCHLIST_20241220200611.md  PUNCHLIST_20241220200636.md  PUNCHLIST_20241220200738.md  PUNCHLIST_20241220201031.md  PUNCHLIST_20241220201718.md  PUNCHLIST_20241220201720.md  PUNCHLIST_20241220203026.md  PUNCHLIST_20241220205807.md  PUNCHLIST_20241220210826.md  PUNCHLIST_20241220211047.md  PUNCHLIST_20241220211819.md  PUNCHLIST_20241220221910.md  README_20241220175140.md  README_20241220175247.md  README_20241220175258.md  README_20241220184745.md  README_20241220185457.md  UPGRADE_PROPOSAL_20241220171236.md
.history/docs/: user_guide_20241220201046.md  (+1 more)
code-historian-rs/: Cargo.toml
code-historian-rs/docs/: ARCHITECTURE.md  PLUGIN_TEMPLATE.md
code-historian-rs/src/: analyzer.rs  error.rs  git.rs  interactive.rs  lib.rs  report.rs  visualization.rs  watch.rs
code-historian-rs/templates/: default_config.toml
docs/: README.md  index.md  requirements.txt  typescript-error-fixer.md  vscode-extension.md
src/: benchmarks.rs  cache.rs  cache_test.rs  lib.rs
tests/: visualization_tests.rs
(+148 files in other folders)
