[package]
name = "code-historian"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool for analyzing code evolution in software projects"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Git integration
git2 = "0.18"

# Parsing and analysis
tree-sitter = "0.20"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

# Visualization
plotters = "0.3"
graphviz-rust = "0.6"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.34", features = ["full"] }
indicatif = "0.17"
directories = "5.0"
notify = "6.1"
libloading = "0.8"
semver = { version = "1.0", features = ["serde"] }
handlebars = { version = "4.5", features = ["dir_source"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"

[features]
default = ["visualization", "plugin-system", "ml"]
visualization = []
plugin-system = []
ml = []

[lib]
name = "code_historian"
path = "src/lib.rs"

[[bin]]
name = "code-historian"
path = "src/main.rs"
